@startuml er-conversations
' Propósito: modelo del módulo conversations bajo el rediseño CQRS — control plane Postgres (fuente de verdad: ChannelAccount + Conversation + ConversationAssignmentLog + message_outbox) + data plane Firestore (read-model real-time del stream de mensajes). Los MENSAJES ya NO viven en Postgres: pasan a Firestore vía Transactional Outbox. Pipe de mensajería multicanal (WhatsApp en el MVP).
' Última actualización: 2026-06-20 (REDISEÑO CQRS — brief conversations_firestore_redesign.md §1/§2/§10: -tablas message/message_attachment (a Firestore); +message_outbox (Postgres, cola transaccional, id=mid varchar(255) provisto por el caller — NO hereda PrimaryKeyMixin); +Firestore como store externo <<external, Firestore>> con conversations/{cid} (doc espejo) + conversations/{cid}/messages/{mid} (el mensaje); relación conversation --proyección via outbox--> doc Firestore. El relay corre SÍNCRONO en el request (BackgroundTasks DESCARTADO). channel_account/conversation/conversation_assignment_log + lead_activity (FK aditiva) + externos person/user SIN cambios. ADR-011.)
' Código de referencia: backend/app/modules/conversations/models/ (channel_account, conversation, conversation_assignment_log, message_outbox) + backend/app/core/firestore.py

!theme plain
skinparam linetype ortho
skinparam nodesep 55
skinparam ranksep 70
skinparam defaultFontSize 13
hide circle
hide empty members

title ER — Backend · Conversations module (CQRS: Postgres control plane + Firestore data plane)

legend top right
  | <#FFFFE0> Marker | Significado |
  | * | NOT NULL |
  | <<PK>> | Primary Key |
  | <<FK>> | Foreign Key (constraint física) |
  | <<unique>> | UNIQUE constraint |
  | <<nullable>> | NULL permitido |
  | <<fwd>> | FK forward diferida — columna sin FK física (ADR-009) |
  | <<external, Firestore>> | Store externo — documento Firestore (NO Postgres) |
endlegend

' ─────────────────────────────────────────────────────────────
' Cuenta de canal (config externa + ref al secreto) — Postgres
' ─────────────────────────────────────────────────────────────
entity "channel_account" as t_ca {
  * id : varchar(36) <<PK>>
  --
  * channel_type : varchar(40)   ' slug de crm.ChannelType (reuse, NO FK)
  * name : varchar(120)
  * external_identifier : varchar(255)
  secret_name : varchar(255) <<nullable>>
  webhook_verify_token : varchar(255) <<nullable>>
  phone_number_id : varchar(64) <<nullable>>
  bot_configuration_id : varchar(36) <<nullable, fwd→bot_configuration>>
  default_campaign_id : varchar(36) <<nullable, fwd→campaign>>
  --
  ' UNIQUE PARCIAL (channel_type, external_identifier) WHERE deleted_at IS NULL
  '   (dialect-agnóstico: postgresql_where + sqlite_where)
  '   Violación → CHANNEL_ACCOUNT_EXTERNAL_TAKEN (409)
  * active : boolean
  deleted_at : timestamptz <<nullable>>
  * created_on : timestamptz
  * created_by : varchar(36)
  * updated_on : timestamptz
  * updated_by : varchar(36)
}

' ─────────────────────────────────────────────────────────────
' Conversation (hilo entre Person y ChannelAccount) — Postgres (control plane / fuente de verdad)
' NO se va a Firestore: preserva FK lead_activity, UNIQUE 1-open y filtros SQL del inbox.
' ─────────────────────────────────────────────────────────────
entity "conversation" as t_conv {
  * id : varchar(36) <<PK>>
  --
  * channel_account_id : varchar(36) <<FK→channel_account>>
  person_id : varchar(36) <<nullable, FK→person>>
  * status : varchar(20)        ' open / closed
  * assignee_type : varchar(20) ' bot / advisor / unassigned
  assignee_user_id : varchar(36) <<nullable, FK→user>>
  bot_configuration_id : varchar(36) <<nullable, fwd→bot_configuration>>
  * opened_at : timestamptz
  closed_at : timestamptz <<nullable>>
  last_message_at : timestamptz <<nullable>>
  last_message_preview : varchar(255) <<nullable>>
  * unread_count : int = 0
  --
  ' UNIQUE PARCIAL (person_id, channel_account_id)
  '   WHERE status='open' AND deleted_at IS NULL  (una sola open por par)
  ' Invariantes (validados en service, code propio):
  '   assignee_type='advisor'    ⇒ assignee_user_id NOT NULL (sino INVALID_ASSIGNEE 400)
  '   assignee_type ∈ {bot, unassigned} ⇒ assignee_user_id IS NULL
  '   assignee_type='bot'        ⇒ bot_configuration_id NOT NULL (no aplica en MVP)
  '   cerrar (closed)            ⇒ cierra el log vigente (ended_at=now)
  '   cambio de assignee         ⇒ cierra log vigente + abre uno nuevo (misma tx)
  ' PROYECCIÓN: cada cambio relevante encola op=conversation_upsert en message_outbox
  '   → el doc espejo conversations/{cid} en Firestore (assignee/allowed_reader_ids/unread).
  * active : boolean
  deleted_at : timestamptz <<nullable>>
  * created_on : timestamptz
  * created_by : varchar(36)
  * updated_on : timestamptz
  * updated_by : varchar(36)
}

' ─────────────────────────────────────────────────────────────
' Outbox transaccional (NUEVO) — cola durable Postgres→Firestore.
' PK·A·T — SIN SoftDelete. Idempotencia natural: id = mid del mensaje.
' ─────────────────────────────────────────────────────────────
entity "message_outbox" as t_outbox {
  * id : varchar(255) <<PK, unique>>   ' = el mid del mensaje (wamid inbound / uuid outbound) → ON CONFLICT DO NOTHING = dedup real
  --
  * conversation_id : varchar(36) <<FK→conversation>>
  * op : varchar(40)            ' message_create / message_status / conversation_upsert
  * payload : jsonb             ' el doc a escribir en Firestore (shape del contrato de API, snake_case)
  * status : varchar(20)        ' pending / done / failed
  * attempts : int = 0
  last_error : varchar(500) <<nullable>>
  processed_on : timestamptz <<nullable>>
  --
  ' Índice por (status, created_on) → el relay barre los pending.
  ' SIN SoftDelete — cola operativa (no audit de negocio).
  ' El relay (SÍNCRONO en el request, misma sesión, antes del 200) escribe a Firestore
  '   (Admin SDK) con set(doc_id=mid) (create-if-absent) y marca done; reintenta por-fila.
  '   (BackgroundTasks DESCARTADO: no proyectaba en Cloud Run. Sweep/Cloud Task de filas
  '    failed = relay_outbox_in_new_session.)
  * active : boolean
  * created_on : timestamptz
  * created_by : varchar(36)
  * updated_on : timestamptz
  * updated_by : varchar(36)
}

' ─────────────────────────────────────────────────────────────
' Historial de handoff (inmutable — SIN SoftDelete) — Postgres
' ─────────────────────────────────────────────────────────────
entity "conversation_assignment_log" as t_log {
  * id : varchar(36) <<PK>>
  --
  * conversation_id : varchar(36) <<FK→conversation>>
  from_assignee_type : varchar(20) <<nullable>>
  from_assignee_user_id : varchar(36) <<nullable, FK→user>>
  * to_assignee_type : varchar(20)
  to_assignee_user_id : varchar(36) <<nullable, FK→user>>
  * started_at : timestamptz
  ended_at : timestamptz <<nullable>>
  by_actor_user_id : varchar(36) <<nullable, FK→user>>
  reason : varchar(255) <<nullable>>
  --
  ' SIN SoftDelete — audit trail inmutable
  * active : boolean
  * created_on : timestamptz
  * created_by : varchar(36)
  * updated_on : timestamptz
  * updated_by : varchar(36)
}

' ─────────────────────────────────────────────────────────────
' Firestore (Native mode) — data plane / read-model real-time (NO Postgres)
' Escrito SOLO por el backend (Admin SDK, bypassa rules); el browser solo LEE.
' ─────────────────────────────────────────────────────────────
entity "conversations/{cid}" as fs_conv <<external, Firestore>> #E6F2FF {
  ' Doc espejo liviano del Conversation de Postgres (reglas + inbox live)
  ' cid = el UUID del Conversation de Postgres (clave de join)
  status
  assignee_user_id
  allowed_reader_ids : [uid...]   ' [assignee] + admins/supervisores → Security Rules
  channel_account_id
  person_id
  person_name
  last_message_at
  last_message_preview
  unread_count
  updated_at
}

entity "conversations/{cid}/messages/{mid}" as fs_msg <<external, Firestore>> #E6F2FF {
  ' El mensaje (subcolección). mid = wamid (inbound) / uuid (outbound) → idempotencia natural
  direction
  sender_type
  sender_user_id
  bot_configuration_id
  content_type
  content
  external_id
  external_status
  sent_at
  delivered_at
  read_at
  failed_at
  failure_reason
  attachments : [...]   ' F4 (texto-primero; binarios → GCS, url firmada en el doc)
  provider_payload
  created_at
}

' ─────────────────────────────────────────────────────────────
' Entidades externas (Postgres)
' ─────────────────────────────────────────────────────────────
entity "person" as t_per <<external>> #lightgrey {
  ' Módulo: crm
  * id : varchar(36) <<PK>>
  ...
}
entity "user" as t_user <<external>> #lightgrey {
  ' Módulo: admin
  * id : varchar(36) <<PK>>
  ...
}
entity "lead_activity" as t_act <<external>> #lightgrey {
  ' Módulo: crm — conversations le agrega la FK aditiva
  * id : varchar(36) <<PK>>
  * person_id : varchar(36) <<FK→person>>
  related_conversation_id : varchar(36) <<nullable, FK aditiva→conversation>>
  ...
}
entity "bot_configuration" as t_bot <<external>> #lightgrey {
  ' Módulo: bots (#6, NO existe) — FK forward, hoy NULL
  * id : varchar(36) <<PK>>
  ...
}
entity "campaign" as t_camp <<external>> #lightgrey {
  ' Módulo: marketing (#8, NO existe) — FK forward, hoy NULL
  * id : varchar(36) <<PK>>
  ...
}

' ─────────────────────────────────────────────────────────────
' Relaciones
' ─────────────────────────────────────────────────────────────

' ChannelAccount → Conversation
t_ca ||--o{ t_conv : "abre\nconversaciones"

' Conversation → Person (opcional, casi siempre poblado)
t_per |o--o{ t_conv : "person_id\n(opcional al inicio)"

' Conversation → User (assignee opcional)
t_user |o--o{ t_conv : "assignee\n(opcional)"

' Conversation → BotConfiguration (forward, opcional)
t_bot |o..o{ t_conv : "bot efectivo\n(fwd, opcional)"

' ChannelAccount → BotConfiguration (default, forward)
t_bot |o..o{ t_ca : "bot default\n(fwd, opcional)"

' ChannelAccount → Campaign (atribución, forward)
t_camp |o..o{ t_ca : "campaña\nde origen (fwd)"

' Conversation → message_outbox (encola message_create / message_status / conversation_upsert)
t_conv ||--o{ t_outbox : "encola ops\n(transactional outbox)"

' Conversation → ConversationAssignmentLog
t_conv ||--o{ t_log : "historial\nhandoffs"

' Log → User (from/to/by, todos opcionales)
t_user |o--o{ t_log : "from/to/by\n(opcionales)"

' Conversation → lead_activity (FK ADITIVA — conversations la agrega, ADR-009)
t_conv ||--o{ t_act : "related_conversation_id\n(FK aditiva)"

' ── PROYECCIÓN CQRS (vía outbox) hacia Firestore ──
' conversation (Postgres) --proyección via outbox--> doc espejo Firestore
t_conv ..> fs_conv : "proyección\nvia outbox\n(op=conversation_upsert)"
' el relay materializa cada op del outbox como doc Firestore (mid = id del outbox)
t_outbox ..> fs_msg : "relay (Admin SDK)\nset(doc_id=mid)\n(op=message_create/_status)"
' Firestore: subcolección messages bajo el doc de conversación
fs_conv ||--o{ fs_msg : "subcolección\nmessages/{mid}"

' ─────────────────────────────────────────────────────────────
' Notas
' ─────────────────────────────────────────────────────────────

note right of t_ca
  **Cuenta de canal (multi-cuenta)**
  Un nro de WhatsApp Business = una fila;
  una clínica puede tener N números sin
  redeploy.

  ""channel_type"" REUSA el enum
  ""crm.ChannelType"" (single source of truth,
  NO se duplica, NO es FK física).

  ""secret_name"" apunta a GCP Secret Manager —
  el ""secret_resolver"" (app.core.secrets, SDK
  runtime + cache TTL) resuelve el token; el
  valor NUNCA vive en BD ni viaja al schema.
  NULL = fallback a env (local/dev). ADR-010.

  ""phone_number_id"" arma la URL de envío de
  Meta ""/{phone_number_id}/messages"".
end note

note right of t_conv
  **Una sola conversation OPEN
  por (person, channel_account)**
  vía UNIQUE PARCIAL sobre status='open'
  AND deleted_at IS NULL. Múltiples cerradas
  pueden coexistir como historial; reabrir
  valida no-otra-open (CONVERSATION_ALREADY_OPEN 409).

  ""assignee_type"" + ""assignee_user_id"" +
  ""bot_configuration_id"" determinan quién
  atiende ahora. Conversación nueva = AUTO al
  dueño del lead (advisor_map de crm), fallback
  ""unassigned"" (bandeja compartida).

  **Control plane (fuente de verdad).** Queda en
  Postgres: preserva la FK ""lead_activity.related_
  conversation_id"", el UNIQUE 1-open y los filtros
  SQL del inbox. Se proyecta a Firestore como doc
  espejo liviano vía ""message_outbox"" (ADR-011).
end note

note bottom of t_outbox
  **Transactional Outbox (resuelve el dual-write)**
  En la MISMA TX que el cambio de negocio se inserta
  la fila del outbox → consistencia sin transacción
  distribuida y sin pérdida (el mensaje vive en el
  outbox tras el COMMIT aunque el relay aún no corra).

  **Idempotencia**: ""id = mid"" (""wamid"" inbound / uuid
  outbound) UNIQUE → ""INSERT ... ON CONFLICT (id) DO
  NOTHING"" deduplica reenvíos de webhook. El
  ""unread_count++"" solo corre si el INSERT fue nuevo.

  **Relay**: SÍNCRONO en el request (misma sesión, antes
  del 200; ""message_service.relay_outbox(db)"") barre
  ""(status,created_on)"" pendientes, escribe a Firestore
  con el Admin SDK (""set(doc_id=mid)"", create-if-absent)
  y marca ""done""; reintenta por-fila (""attempts""/
  ""last_error""). ""BackgroundTasks"" DESCARTADO (no
  proyectaba en Cloud Run); sweep/Cloud Task de filas
  ""failed"" = ""relay_outbox_in_new_session"". Reemplaza el
  UNIQUE parcial de la vieja tabla ""message"". ADR-011.
end note

note bottom of fs_msg
  **Firestore (Native mode) = data plane**
  El stream de mensajes vive aquí (NO Postgres). El
  browser abre listeners READ-ONLY (""onSnapshot"")
  autenticados con un Custom Token minteado por el
  backend; las Security Rules espejan el RBAC vía
  ""allowed_reader_ids"" / ""can_read_all"". TODA escritura
  es del backend (Admin SDK, bypassa rules).

  ""mid"" = ""wamid"" (inbound) / uuid (outbound) → doc-id
  idempotente (""set"" create-if-absent). Status callbacks
  (delivered/read/failed) actualizan el doc directo vía
  Admin SDK (best-effort, no tocan Postgres). Una DB
  Firestore por entorno (""medisage-qa"" / ""medisage"",
  Native mode, us-central1). Audit/analítica:
  export Firestore→BigQuery. ADR-011.
end note

note right of t_log
  **Cada handoff cierra el log previo
  (ended_at = now()) y abre uno nuevo**
  ""by_actor_user_id"" NULL = automático
  (auto-asignación / sistema).
  Tomar/Liberar emiten CONVERSATION_TAKEN /
  CONVERSATION_RELEASED a crm.lead_activity
  (NO MESSAGE_SENT por-mensaje).
  Inmutable: audit trail. Take/release/close/reopen
  además encolan ""conversation_upsert"" al outbox
  (refleja assignee/allowed_reader_ids en Firestore).
end note

note bottom of t_act
  **FK ADITIVA — conversations la agrega (ADR-009)**
  La columna ""related_conversation_id"" ya existe
  en ""crm.lead_activity"" (varchar(36)+index, SIN
  constraint). conversations agrega la FK física
  ADITIVA en su migración de threads (F2),
  Postgres-only; NO agrega ""relationship"" ORM
  (modelo crm intacto). Seguro: todos los valores
  actuales son NULL. (caveat: el ALTER ADD FK no
  corre en sqlite/create_all.)
  **Sigue válida**: Conversation queda en Postgres.
end note

note as N_FWD
  **FKs forward diferidas (ADR-009)** — ""<<fwd>>""
  Columnas ""varchar(36)"" nullable SIN FK física ni
  ""relationship"" — ""bots""(#6) y ""marketing""(#8) aún
  NO existen (declarar el ForeignKey rompería la
  migración; el relationship rompería el mapper).
  Hoy son SIEMPRE NULL. El módulo dueño agrega la
  constraint ADITIVA al crear su tabla:
  • ""channel_account.bot_configuration_id"" → bots.bot_configuration
  • ""conversation.bot_configuration_id""    → bots.bot_configuration
  • ""channel_account.default_campaign_id""  → marketing.campaign
  (El ""bot_configuration_id"" del mensaje ahora es campo
  del doc Firestore, NO columna Postgres.)
end note
N_FWD .. t_ca
N_FWD .. t_bot

@enduml
